New FrostyBoy Sandbox/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ttlchk_BSP__c</fullName>
        <label>ttlchk_BSP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ttlchk_Barcode__c</fullName>
        <label>ttlchk_Barcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ttlchk_DPID__c</fullName>
        <externalId>true</externalId>
        <label>ttlchk_DPID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ttlchk_Listing_Type__c</fullName>
        <label>ttlchk_Listing_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ttlchk_searchType__c</fullName>
        <label>ttlchk_searchType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>